# test-android

./: .gitignore  .gitmodules  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/felspar/android/fosttester/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: fost-android-java  fost-android-ndk  fost-mobile  native-lib.cpp
app/src/main/java/com/felspar/android/fosttester/: Tester.kt
app/src/main/res/layout/: activity_tester.xml  content_tester.xml
app/src/main/res/menu/: menu_tester.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/felspar/android/fosttester/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
